# regex-demo

./: Main.hs  RegexParsing.hs  StateMachines.hs  Test.hs  Vagrantfile  dumb.hs  regex.cabal
